--- a/src/Containers/Home/Home.scss
+++ b/src/Containers/Home/Home.scss
@@ -43,8 +43,8 @@
 
 
 .writings {
-   padding: 390px 40px 60px 40px;
-   margin: 0 -20px;
+   padding: 390px 20px 60px 20px;
+   // margin: 0 -20px;
 
    .shiftRight {
       margin-left: 20px;
