--- a/src/Containers/Projects/Projects.scss
+++ b/src/Containers/Projects/Projects.scss
@@ -6,7 +6,9 @@
    padding: 40px;
    transition: 1s all;
    animation: lead-animation .7s;
-
+   @media only screen and (min-width: #{$mobile-width}) {
+      margin-right: -20px;
+   }
    @media only screen and (max-width: #{$mobile-width}) {
       flex-direction: column-reverse;
       padding: 10px 10px;
